# NP-Joker_Zadaca_karti_lab6

./: CMakeLists.txt  README.md  karti.cpp  main.cpp
